--- a/css/index.css
+++ b/css/index.css
@@ -1,5 +1,6 @@
 @charset "UTF-8";
-
+/* STYLE INDEX */
+/*  Setup  */
 /* SETUP */
 @font-face {
   font-family: "omnesR";
@@ -12,10 +13,11 @@
   font-weight: normal;
   font-style: normal; }
 body {
+  color: #000000;
   font-family: "omnesR", sans-serif;
   font-size: 14px;
   line-height: 1.5em;
-  color: #000000; }
+  word-break: break-word; }
   @media (min-width: 800px) {
     body {
       font-size: 16px; } }
@@ -95,7 +97,8 @@ h4 {
   text-align: center;
   font-size: 1em; }
   .tw-btn-foot > a {
-    display: block; }
+    display: block;
+    color: #000000; }
   @media (min-width: 800px) {
     .tw-btn-foot {
       font-size: 0.875em; } }
@@ -110,7 +113,8 @@ h4 {
   text-align: center;
   font-size: 1em; }
   .fb-btn-foot > a {
-    display: block; }
+    display: block;
+    color: #000000; }
   @media (min-width: 800px) {
     .fb-btn-foot {
       font-size: 0.875em; } }
@@ -118,16 +122,85 @@ h4 {
     content: url("../img/fb-blue.svg");
     display: block; }
 
-.fb-btn-cir {
+.cir-btn {
   -moz-border-radius: 100%;
   -webkit-border-radius: 100%;
   border-radius: 100%;
-  background: #396FB6;
+  display: inline-block;
   height: 3.357em;
+  position: relative;
+  -moz-transition: all 0.3s ease;
+  -o-transition: all 0.3s ease;
+  -webkit-transition: all 0.3s ease;
+  transition: all 0.3s ease;
   width: 3.357em; }
-  .fb-btn-cir:before {
-    content: url("../img/fb-gray.svg");
+  .cir-btn:before {
+    display: block;
+    top: 0.9em;
+    text-align: center;
+    position: absolute;
+    left: 0;
+    margin: 0 auto;
+    right: 0; }
+  .cir-btn:hover {
+    -webkit-filter: brightness(110%);
+    filter: brightness(110%); }
+
+.fb-share {
+  background: #396FB6; }
+  .fb-share:before {
+    content: url("../img/fb-white.svg"); }
+
+.tw-share {
+  background: #4F98F4; }
+  .tw-share:before {
+    content: url("../img/tw-white.svg"); }
+
+.follow-btn {
+  max-width: 5.3em;
+  display: inline-block;
+  vertical-align: top;
+  text-align: center;
+  font-size: 1em;
+  color: #000000; }
+  .follow-btn > a {
+    display: block;
+    color: #000000; }
+  @media (min-width: 800px) {
+    .follow-btn {
+      font-size: 0.875em; } }
+  .follow-btn:before {
     display: block; }
+
+.fb-follow:before {
+  content: url("../img/fb-gray.svg"); }
+
+.tw-follow:before {
+  content: url("../img/tw-gray.svg"); }
+
+.medium-follow:before {
+  content: url("../img/medium-gray.svg"); }
+
+.web-follow:before {
+  content: url("../img/web-gray.svg"); }
+
+.cir-img-x2 {
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+  -moz-border-radius: 100%;
+  -webkit-border-radius: 100%;
+  border-radius: 100%;
+  margin-top: 2.5em;
+  margin-right: 1.25em;
+  margin-bottom: 1.25em;
+  width: 90%;
+  padding-bottom: 90%; }
+  @media (min-width: 1920px) {
+    .cir-img-x2 {
+      max-width: 18.75em;
+      height: 18.75em;
+      padding-bottom: inherit; } }
 
 .cir-img {
   background-repeat: no-repeat;
@@ -168,7 +241,8 @@ h4 {
   padding: 1.875em 0;
   text-align: center;
   float: left;
-  width: 100%; }
+  width: 100%;
+  word-break: initial; }
   .breadcrumbs li {
     display: inline-block;
     position: relative; }
@@ -183,11 +257,8 @@ h4 {
     content: "/";
     margin-left: 0.4em;
     position: absolute; }
-  .breadcrumbs li:last-child a {
-    padding-right: 0; }
   .breadcrumbs li:last-child a:after {
-    content: "";
-    margin: 0; }
+    content: ""; }
 
 .col-x2 {
   -moz-column-count: 1;
@@ -228,7 +299,6 @@ h4 {
     width: 100%; }
 
 /* COLORS */
-/* BG COLORS */
 .bg-blue {
   background: #396FB6;
   color: #FFFFFF; }
@@ -246,8 +316,45 @@ h4 {
   .img-video-slider.bg-blue button.slick-arrow {
     background: #396FB6; }
 
+.bg-aqua {
+  background: #2BBCB6;
+  color: #FFFFFF; }
+
+.hero-slider.bg-aqua,
+.img-video-slider.bg-aqua {
+  background: #2BBCB6;
+  color: #2BBCB6; }
+  .hero-slider.bg-aqua button, .hero-slider.bg-aqua button:after, .hero-slider.bg-aqua a,
+  .img-video-slider.bg-aqua button,
+  .img-video-slider.bg-aqua button:after,
+  .img-video-slider.bg-aqua a {
+    color: #2BBCB6; }
+  .hero-slider.bg-aqua button.slick-arrow,
+  .img-video-slider.bg-aqua button.slick-arrow {
+    background: #2BBCB6; }
+
+.bg-skyblue {
+  background: #50C7E8;
+  color: #FFFFFF; }
+
+.hero-slider.bg-skyblue,
+.img-video-slider.bg-skyblue {
+  background: #50C7E8;
+  color: #50C7E8; }
+  .hero-slider.bg-skyblue button, .hero-slider.bg-skyblue button:after, .hero-slider.bg-skyblue a,
+  .img-video-slider.bg-skyblue button,
+  .img-video-slider.bg-skyblue button:after,
+  .img-video-slider.bg-skyblue a {
+    color: #50C7E8; }
+  .hero-slider.bg-skyblue button.slick-arrow,
+  .img-video-slider.bg-skyblue button.slick-arrow {
+    background: #50C7E8; }
+
 .bg-sand {
   background: #F5F3ED; }
+
+.bg-white {
+  background: #FFFFFF; }
 
 /* COLOR 4 TEXT */
 .c-white {
@@ -258,9 +365,12 @@ h4 {
 .c-blue {
   color: #396FB6; }
 
+.c-aqua {
+  color: #2BBCB6; }
+
 /* COLOR BORDER */
 .border-aqua {
-  border: 2px solid #2BBCB6; }
+  border: 5px solid #2BBCB6; }
 
 /*GRID */
 section {
@@ -312,36 +422,37 @@ section {
       margin-bottom: 2.5em; } }
 
 .one-col {
-  float: left;
+  display: inline-block;
   width: 100%; }
 
 .one-fourth {
-  float: left;
+  display: inline-block;
+  vertical-align: top;
   width: 100%; }
   @media (min-width: 800px) {
     .one-fourth {
-      width: 25%;
+      width: 24%;
       padding-bottom: 2.5em; } }
 
 .three-col {
-  float: left;
+  display: inline-block;
+  vertical-align: top;
   width: 100%; }
   @media (min-width: 800px) {
     .three-col {
-      width: 75%; } }
+      width: 74%; } }
 
 .two-col {
-  float: left;
+  display: inline-block;
+  vertical-align: top;
   width: 100%; }
   @media (min-width: 800px) {
     .two-col {
-      width: 50%; } }
+      width: 49%; } }
 
 @media (min-width: 800px) {
   .columns {
-    padding-right: 1.25em; }
-    .columns:last-child {
-      padding-right: 0; } }
+    padding-right: 1.25em; } }
 
 .three-cols {
   width: 100%; }
@@ -357,6 +468,20 @@ section {
 .two-thirds_quarter > div:nth-child(2), .two-thirds_quarter > li:nth-child(2) {
   width: 25%; }
 
+.two-cols {
+  float: left;
+  width: 100%; }
+  .two-cols > div, .two-cols > li, .two-cols > figure, .two-cols > ul {
+    display: inline-block;
+    vertical-align: top;
+    position: relative;
+    width: 100%; }
+    @media (min-width: 800px) {
+      .two-cols > div, .two-cols > li, .two-cols > figure, .two-cols > ul {
+        margin: 0;
+        width: 49%; } }
+
+/*  Left Floated */
 /*  Componentes */
 /* ELEMENTS */
 section {
@@ -521,7 +646,7 @@ header {
 
 input#searchBox {
   font-family: "omnesR", sans-serif;
-  background: url("../img/search.svg") no-repeat 8% 50%;
+  background: url("../img/search.svg") no-repeat 3% 50%;
   height: 0;
   visibility: hidden;
   border: none;
@@ -535,17 +660,23 @@ input#searchBox {
   -webkit-transition: all 0.3s ease;
   transition: all 0.3s ease;
   padding-left: 5%;
-  padding-right: 5%; }
+  padding-right: 5%;
+  padding-left: 4em; }
   @media (min-width: 1440px) {
     input#searchBox {
       padding-left: 10%;
       padding-right: 10%; } }
   input#searchBox:focus {
     outline: 0; }
+  @media (min-width: 1440px) {
+    input#searchBox {
+      background: url("../img/search.svg") no-repeat 8% 50%; } }
 
 input#searchBox.openSearch {
   height: auto;
   padding: 1.8em 0;
+  padding-left: 4em;
+  background: url("../img/search.svg") no-repeat 3% 50%;
   visibility: visible;
   opacity: 1;
   visibility: visible;
@@ -554,11 +685,15 @@ input#searchBox.openSearch {
   -webkit-transition: all 0.3s ease;
   transition: all 0.3s ease;
   padding-left: 5%;
-  padding-right: 5%; }
+  padding-right: 5%;
+  padding-left: 4em; }
   @media (min-width: 1440px) {
     input#searchBox.openSearch {
       padding-left: 10%;
       padding-right: 10%; } }
+  @media (min-width: 1440px) {
+    input#searchBox.openSearch {
+      background: url("../img/search.svg") no-repeat 8% 50%; } }
 
 aside {
   height: 100vh;
@@ -671,26 +806,23 @@ footer {
   footer a {
     color: #4A4A4A;
     text-decoration: none; }
-  footer .social-media {
-    display: none; }
+  footer > div {
+    float: left;
+    width: 100%;
+    display: block; }
+    footer > div > div, footer > div > li, footer > div > figure, footer > div > ul {
+      display: inline-block;
+      vertical-align: top;
+      position: relative;
+      width: 100%; }
+      @media (min-width: 800px) {
+        footer > div > div, footer > div > li, footer > div > figure, footer > div > ul {
+          margin: 0;
+          width: 49%; } }
   footer > div:first-child {
     margin-bottom: 1.25em; }
-  @media (min-width: 800px) {
-    footer > div {
-      float: left;
-      width: 100%;
-      display: block; }
-      footer > div > div, footer > div > li, footer > div > figure {
-        width: 100%;
-        float: left;
-        vertical-align: top;
-        position: relative; } }
-    @media (min-width: 800px) and (min-width: 800px) {
-      footer > div > div, footer > div > li, footer > div > figure {
-        float: left;
-        margin: 0;
-        vertical-align: top;
-        width: 50%; } }
+  footer .social-media {
+    display: none; }
   @media (min-width: 800px) {
     footer > div:first-child {
       margin-bottom: 8.75em; }
@@ -706,7 +838,7 @@ footer {
       font-family: "omnesSB", sans-serif; }
     footer .social-media {
       display: inherit;
-      text-align: right;
+      float: right;
       margin-top: 1.5em; }
     footer .social-media li {
       margin-right: 1.25em; }
@@ -837,30 +969,74 @@ footer {
       width: 100%; } }
 
 /* FOUR COLUMNS W/THUMBNAIL IMAGE */
-.thumbnail-fourths {
+.thumbnail-fourths,
+.cir-thumbnail-fourths {
   margin-bottom: 1.25em; }
-  .thumbnail-fourths .img {
+  .thumbnail-fourths .img,
+  .cir-thumbnail-fourths .img {
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
     height: 10em;
     margin-bottom: 0.625em; }
-  .thumbnail-fourths h1 {
+  .thumbnail-fourths h1,
+  .cir-thumbnail-fourths h1 {
     font-family: "omnesSB", sans-serif;
     margin-bottom: 1em; }
-  .thumbnail-fourths h3 {
+  .thumbnail-fourths h3,
+  .cir-thumbnail-fourths h3 {
     color: #000000; }
-  .thumbnail-fourths p {
+  .thumbnail-fourths p,
+  .cir-thumbnail-fourths p {
     color: #4A4A4A; }
   @media (max-width: 1280px) {
-    .thumbnail-fourths .one-fourth {
-      width: 50%;
+    .thumbnail-fourths .one-fourth,
+    .cir-thumbnail-fourths .one-fourth {
+      width: 49%;
       padding-right: 1.25em;
       margin-bottom: 1.25em; } }
   @media (min-width: 800px) {
-    .thumbnail-fourths {
+    .thumbnail-fourths,
+    .cir-thumbnail-fourths {
       margin-bottom: 0; } }
   @media (max-width: 600px) {
-    .thumbnail-fourths .one-fourth {
+    .thumbnail-fourths .one-fourth,
+    .cir-thumbnail-fourths .one-fourth {
       width: 100%;
       padding-right: 0; } }
+
+@media (min-width: 800px) {
+  .cir-thumbnail-fourths .one-fourth {
+    width: 32%; } }
+@media (min-width: 1280px) {
+  .cir-thumbnail-fourths .one-fourth {
+    width: 24%; } }
+
+.cir-thumbnail-fourths a {
+  color: #000000;
+  text-align: center; }
+.cir-thumbnail-fourths h4 {
+  font-family: "omnesSB", sans-serif; }
+.cir-thumbnail-fourths .cir-img-x2 {
+  margin-left: auto;
+  margin-right: auto; }
+
+.img-info-wrap {
+  padding: 2.5em;
+  background: #FFFFFF; }
+  .img-info-wrap .map img {
+    width: 100%;
+    margin-bottom: 1.25em; }
+  .img-info-wrap a {
+    text-decoration: underline; }
+  .img-info-wrap li {
+    margin-bottom: 1.25em; }
+  .img-info-wrap ul li p {
+    font-family: "omnesSB", sans-serif;
+    color: #2BBCB6; }
+  @media (max-width: 800px) {
+    .img-info-wrap .map {
+      width: 100%; }
+    .img-info-wrap li {
+      display: inline-block;
+      width: 49%; } }
